--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
-   <link rel="stylesheet" href="../css/stile.css">
+   <link rel="stylesheet" href="stile.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400&display=swap" rel="stylesheet">
-   <script src="../js/script.js" defer></script>
+   <script src="script.js" defer></script>
    <script src="https://kit.fontawesome.com/86870e8d2d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
 <header class="wrapper">
-      <a href="../html/index.html"><img src="../src/img/logo-tipo2.png" alt=""></a>
+      <a href="../html/index.html"><img src="src/img/logo-tipo2.png" alt=""></a>
         <p>Accedi o registrati</p>
       <hr>
 </header>
