--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 <header class="wrapper">
-      <a href="../html/index.html"><img src="src/img/logo-tipo2.png" alt=""></a>
+      <a href="index.html"><img src="src/img/logo-tipo2.png" alt=""></a>
         <p>Accedi o registrati</p>
       <hr>
 </header>
