--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
          </defs>
        </svg>
        </button></p>
-      <a href="html/index.html"><img src="src/img/logo-n.png" alt="logo-labtv"></a>
+      <a href="index.html"><img src="src/img/logo-n.png" alt="logo-labtv"></a>
       
 </header>
 
@@ -415,7 +415,7 @@
       <a href="javascript:void(0)"><i class="fa-brands fa-facebook-f" style="color: #ffffff;"></i></a>
       <a href="javascript:void(0)"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
       <a href="javascript:void(0)"><i class="fa-brands fa-youtube" style="color: #ffffff;"></i></a><br>
-   <a href="html/index.html?m=0">desktop mode forzato</a>
+   <a href="index.html?m=0" style="font-size: 10px">desktop mode forzato</a>
 </footer>
 
 </body>
