--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
-   <link rel="stylesheet" href="stile.css">
+   <link rel="stylesheet" href="../css/stile.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400&display=swap" rel="stylesheet">
-   <script src="script.js" defer></script>
+   <script src="../js/script.js" defer></script>
    <script src="https://kit.fontawesome.com/86870e8d2d.js" crossorigin="anonymous"></script>
    <link href="https://fonts.magictype.in/css?font-family=Rowdies&weight=300|500|700" rel="stylesheet">
 </head>
@@ -41,7 +41,7 @@
 
 <main class="wrapper">
 
-<h2>Film più popolari</h2>
+<h2>Most Watched</h2>
 
 <div class="containers"> <!--Film in primo piano-->
       <div class="container main img">
@@ -92,8 +92,8 @@
 </div>
          
 <div class="titolini">
-      <h2>Sempre al top!</h2>
-      <h2>Serie da non perdere</h2>
+      <h2>the most likes</h2>
+      <h2>unbelievable series</h2>
 </div>
    
 <div class="grid"> <!--contenitore colonne grid-->
@@ -271,7 +271,7 @@
 </div>
    
 <div id="contatti"> <!--bottone popup contatti-->
-<i class="fa-regular fa-address-card" style="color: #ffffff;"></i>Contattaci!
+<i class="fa-regular fa-address-card" style="color: #ffffff;"></i>Contact us
 </div>
 
 <div class="opaco"></div>
@@ -412,8 +412,8 @@
 
 <footer> <!--footer con tasti social-->
 <p>Creato per <span>LABFORTRAINING</span> da Antonio Nastri</p>
-      <a href="javascript:void(0)"><i class="fa-brands fa-facebook-f" style="color: #ffffff;"></i></a>
-      <a href="javascript:void(0)"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
+      <a href="https://www.facebook.com/labfortraining" target="_blank"><i class="fa-brands fa-facebook-f" style="color: #ffffff;"></i></a>
+      <a href="https://www.instagram.com/labfortraining.it/" target="_blank"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
       <a href="javascript:void(0)"><i class="fa-brands fa-youtube" style="color: #ffffff;"></i></a>
 </footer>
 
